# r-pharma-llm

./: .Rprofile  .gitignore  .nojekyll  CLAUDE.md  DESCRIPTION  Makefile  README.html  README.md  _setup.R  index.html  listings.json  outline-2hr.md  outline.md  pyproject.toml  robots.txt  search.json  setup.html  sitemap.xml  workshop-01.html  workshop-02.html  workshop-03-break.html  workshop-03.html  workshop-04.html  workshop-05.html  workshop-06-break.html  workshop-07.html  workshop-08.html  workshop.html
.github/workflows/: publish.yml
_demos/03_clearbot/: LICENSE  README.md  app.py  icons.py  notes.txt  offcanvas.py  pyproject.toml  requirements.txt  tools.py
_demos/03_clearbot/.posit/publish/: 03_clearbot-SMR6.toml
_demos/03_clearbot/.posit/publish/deployments/: deployment-IL2A.toml
_demos/03_clearbot/www/: demo-warning.js  json-viewer.js  main.js  new-chat-button.js
_demos/04_token-possibilities/: app.R  ideas.md  notes.txt
_demos/05_live/: 05_live.R
_demos/18_manual-tools/: 18_manual-tools-app.R
_exercises/09_pdf/: 09_pdf.R  (+2 more)
about/: index.html
data/: _airbnb-asheville.R  _asheville-zip-codes.csv
slides/: _incremental_slides.R  slides-01.html  slides-01.qmd  slides-02.html  slides-02.qmd  slides-03.html  slides-04.html  slides-05.html  slides-05.qmd  slides-08.html
website/: _metadata.yml  _quarto.yml  index.qmd  setup.qmd  styles-page-transition.scss  styles.scss  workshop-01.qmd  workshop-02.qmd  workshop-03-break.qmd  workshop-03.qmd  workshop-04.qmd  workshop-05.qmd  workshop-06-break.qmd  workshop-07.qmd  workshop-08.qmd  workshop.qmd
(+162 files in other folders)
