[project]
name = "posit-conf-2025-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "chatlas>=0.13.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "faicons>=0.2.2",
    "google-genai>=1.33.0",
    "llama-index>=0.14.0",
    "matplotlib>=3.10.6",
    "nws>=1.3",
    "openai>=1.102.0",
    "pillow>=11.3.0",
    "playsound3>=3.2.6",
    "plotly>=6.3.0",
    "plotnine>=0.15.0",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyhere>=1.0.3",
    "querychat",
    "shiny>=1.4.0",
    "shinychat",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
querychat = { git = "https://github.com/posit-dev/querychat" }

[dependency-groups]
dev = [
    "jupytext>=1.17.3",
    "nbconvert>=7.16.6",
]
